--- a/Zussamenfassung/Zusammenfassung.tex
+++ b/Zussamenfassung/Zusammenfassung.tex
@@ -18,7 +18,8 @@ Fließt in einem elektrischen Leiter ein Strom, dann bildet sich um ihn herum au
 
 Wir betrachten zunächst den einfachsten Fall einer elektromagnetische Wellen als sinusförmige Schwingungen fester Frequenz. Da die Frequenzen der auftretenden Wellen im Bereich 50-60Hz liegen, sind ihre Wellenlängen entsprechend groß -- sie liegen im Bereich von mehreren Kilometern. Der Querschnitt der betrachteten Leiter ist sehr viel kleiner als die Wellenlängen. Dies führt dazu, dass wir von der Lösung der Maxwellschen Gleichungen absehen können und die Gleichungen zum Beschreiben elektromagnetischer Wellen in elektrischen Leitern der einfacheren Methode der Ersatzbilder herleiten können, die sich aus der Anwendung der Kirchhoffschen Regeln ergeben.
 
-Dies führt auf die sogenannten Telegraphenleitungen, die Spannung und Strom entlang eines verlustbehafteten elektrischen Leiters in Abhängigkeit von Ort und Zeit beschreiben. Dies sind partielle Differentialgleichungen erster Ordnung, die sich i.A. nur nummerisch gelöst werden können. Wir betrachten verschiedene vereinfachende Modellannahmen, die es uns erlauben, die Telegraphenleitungen für diese Spezialfälle analytisch zu Lösen, um Aussagen über das qualitative Verhalten der auftretenden Wellen machen zu können.
+Dies führt auf die sogenannten Telegraphenleitungen, die Spannung und Strom entlang eines verlustbehafteten elektrischen Leiters in Abhängigkeit von Ort und Zeit beschreiben. Dies sind partielle Differentialgleichungen erster Ordnung, die sich i.A. nur nummerisch gelöst werden können. Wir betrachten verschiedene vereinfachende Modellannahmen, die es uns erlauben, die Telegraphenleitungen für diese Spezialfälle analytisch zu Lösen, um Aussagen über das qualitative Verhalten der auftretenden Wellen machen zu können.  Insbesondere stellt sich heraus, dass ich im Wesentlichen zwei Wellen im Leitermedium ausbreiten, eine vorwärts laufende und eine zurücklaufende Welle. Letztere ergibt sich durch Reflektion der vorwärts laufenden Welle am Leiterende. Wir betrachten verschiedene Leiterabschlüsse und wie sich diese auf die Reflektion der Wellen auswirkt.
+
 
 
 
