--- a/Zussamenfassung/Zusammenfassung.tex
+++ b/Zussamenfassung/Zusammenfassung.tex
@@ -11,14 +11,13 @@
 
 \maketitle
 
-Um elektrische Energie für die verschiedensten Situationen des täglichen Lebens verwenden zu können, muss sie vom Erzeuger zum Verbraucher --- unter Minimierung von Verlusten --- transportiert werden. Dazu verwendet man elektrische Leiter, die sich u.a. in ihrer Materialzusammensetzung und geometrischer Anordnung unterscheiden.
-Wir betrachten ausschließlich den Transport elektrischer Energie auf einfachen Zweidrahtleitern.
+Um elektrische Energie für die verschiedensten Situationen des täglichen Lebens verwenden zu können, muss sie vom Erzeuger zum Verbraucher --- unter Minimierung von Verlusten --- transportiert werden. Dazu verwendet man elektrische Leiter, die sich u.a. in ihrer Materialzusammensetzung und geometrischer Anordnung unterscheiden. Es ist daher wichtig zu verstehen, wie genau der Energietransport in Leitern abläuft. Wir betrachten ausschließlich den Transport elektrischer Energie auf einfachen Zweidrahtleitern.
 
-Fließt in einem elektrischen Leiter ein Strom, dann bildet sich um ihn herum ein magnetisches Feld aus. Ändert sich der Strom mit der Zeit, wie es z.B. bei Wechselstrom der Fall ist, dann ändert sich mit ihm das magnetische Feld. Ein zeitlich variierendes magnetisches Feld verursacht ein elektrisches Feld, das mit dem des Leiters wechselwirkt und induzierte Gegenspannung genannt wird. Das zwischen zwei Leitern ausgebildete elektrische Feld ändert sich ebenfalls mit dem zeitlich veränderlichen Strom. Dies führt analog zum Ausbilden eines magnetischen Feldes, welches mit dem des Leiters wechselwirkt. Die Maxwellsche Theorie beschreibt zeitlich variierende elektrische und magnetische Felder. Diese breiten sich als elektromagnetische Wellen in alle Raumrichtungen gleichermaßen aus.  Die Ausbreitung elektromagnetischer Wellen wird mittels elektrischen Leitern so beeinflusst, dass in ihnen elektrische Energie transportiert werden kann.
+Fließt in einem elektrischen Leiter ein Strom, dann bildet sich um ihn herum ein magnetisches Feld aus. Ändert sich der Strom mit der Zeit, wie es z.B. bei Wechselströmen der Fall ist, dann ändert sich mit ihm das magnetische Feld. Ein zeitlich variierendes magnetisches Feld verursacht ein elektrisches Feld, das mit dem des Leiters wechselwirkt und eine  Gegenspannung induziert. Das zwischen zwei Leitern ausgebildete elektrische Feld ändert sich ebenfalls mit dem zeitlich veränderlichen Strom. Dies führt analog zum Ausbilden eines magnetischen Feldes, welches mit dem des Leiters wechselwirkt. Die Maxwellsche Theorie beschreibt zeitlich variierende elektrische und magnetische Felder, sogenannte elektromagnetische Felder. Diese breiten sich als elektromagnetische Wellen in alle Raumrichtungen gleichermaßen aus.  Die Ausbreitung elektromagnetischer Wellen wird mittels elektrischen Leitern so beeinflusst, dass in ihnen elektrische Energie transportiert werden kann.
 
-Wir betrachten zunächst den einfachsten Fall einer elektromagnetische Wellen als sinusförmige Schwingung fester Frequenz. Da die Frequenzen der auftretenden Wellen im Bereich 50-60Hz liegen, sind ihre Wellenlängen entsprechend groß -- sie liegen im Bereich von mehreren Kilometern. Der Querschnitt der betrachteten Leiter ist sehr viel kleiner als die Wellenlängen. Dies führt dazu, dass wir von der Lösung der Maxwellschen Gleichungen absehen können und die Gleichungen zum Beschreiben elektromagnetischer Wellen in elektrischen Leitern mit der Methode der Ersatzbilder herleiten können, die sich aus der Anwendung der Kirchhoffschen Regeln ergibt.
+Wir betrachten zunächst den einfachsten Fall einer elektromagnetische Wellen als sinusförmige Schwingung fester Frequenz. Da die Frequenzen der auftretenden Wellen im Bereich 50-60Hz liegen, sind ihre Wellenlängen entsprechend groß -- sie liegen im Bereich von mehreren Kilometern. Der Querschnitt der betrachteten Leiter ist somit sehr viel kleiner als die Wellenlängen. Dies führt dazu, dass wir von der Lösung der Maxwellschen Gleichungen absehen können und die Gleichungen zum Beschreiben elektromagnetischer Wellen in elektrischen Leitern mit der Methode der Ersatzbilder herleiten können, die sich aus der Anwendung der Kirchhoffschen Regeln ergibt.
 
-Dies führt auf die sogenannten Telegraphenleitungen, die Spannung und Strom entlang eines verlustbehafteten elektrischen Leiters in Abhängigkeit von Ort und Zeit beschreiben. Dies sind partielle Differentialgleichungen erster Ordnung, die i.A. nur nummerisch gelöst werden können. Wir betrachten verschiedene vereinfachende Modellannahmen, die es uns erlauben, die Telegraphenleitungen für diese Spezialfälle analytisch zu Lösen, um Aussagen über das qualitative Verhalten der auftretenden Wellen in Leitern machen zu können. Insbesondere stellt sich heraus, dass sich im Wesentlichen zwei Wellen im Leitermedium ausbreiten -- eine vorwärts laufende und eine rücklaufende Welle. Letztere ergibt sich durch Reflektion der vorwärts laufenden Welle am Leiterende. Wir betrachten verschiedene Leiterabschlüsse und wie sich diese auf die Reflektion der Wellen auswirkt.
+Dies führt auf die sogenannten Telegraphenleitungen, die Spannung und Strom entlang eines verlustbehafteten elektrischen Leiters in Abhängigkeit von Ort und Zeit beschreiben. Dies sind partielle Differentialgleichungen erster Ordnung, die i.A. nur nummerisch gelöst werden können. Wir betrachten verschiedene vereinfachende Modellannahmen, die es uns erlauben, die Telegraphenleitungen für diese Spezialfälle analytisch zu lösen, um Aussagen über das qualitative Verhalten der auftretenden Wellen in Leitern machen zu können. Insbesondere stellt sich heraus, dass sich im Wesentlichen zwei Wellen im Leitermedium ausbreiten -- eine vorwärts laufende und eine rücklaufende Welle. Letztere ergibt sich durch Reflektion der vorwärts laufenden Welle am Leiterende. Wir betrachten verschiedene Leiterabschlüsse und wie sich diese auf die Reflektion der Wellen auswirkt.
 
 
 
