--- a/graphics/MagnetischeFeldlinien/document.tex
+++ b/graphics/MagnetischeFeldlinien/document.tex
@@ -1,4 +1,4 @@
-\documentclass{standalone}
+\documentclass[tikz]{standalone}
 
 \usepackage{tikz}
 \usetikzlibrary{decorations.markings}
@@ -10,7 +10,7 @@
 \begin{document}
 
 
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=0.8, transform shape]
 
 % Define styles
 \tikzset{
